`matMul` has one less bug.

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,35 @@
+@misc{hubinger2019risks,
+      title={Risks from Learned Optimization in Advanced Machine Learning Systems}, 
+      author={Evan Hubinger and Chris van Merwijk and Vladimir Mikulik and Joar Skalse and Scott Garrabrant},
+      year={2019},
+      eprint={1906.01820},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI}
+}
+
+@misc{santoro2016oneshot,
+      title={One-shot Learning with Memory-Augmented Neural Networks}, 
+      author={Adam Santoro and Sergey Bartunov and Matthew Botvinick and Daan Wierstra and Timothy Lillicrap},
+      year={2016},
+      eprint={1605.06065},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{AMIT1990111,
+title = {Attractor neural networks and biological reality: associative memory and learning},
+journal = {Future Generation Computer Systems},
+volume = {6},
+number = {2},
+pages = {111-119},
+year = {1990},
+issn = {0167-739X},
+doi = {https://doi.org/10.1016/0167-739X(90)90027-B},
+url = {https://www.sciencedirect.com/science/article/pii/0167739X9090027B},
+author = {Daniel J Amit},
+abstract = {It is argued, in the light of recent neurophysiological findings, that neural networks (cell assemblies) whose connectivity involves strong feedback and which consequently can sustain patterns of high spiking activity (reverberations), are plausible descriptions of cognitive function in certain cortical regions. Such networks can store a high number of different memories and perform associative retrieval effectively, even in the presence of high levels of noise, synaptic damage and neuronal sloppiness. Such Attractor Neural Network (ANNs) produce emergent signals which indicate the completion of a computation. Moreover, the existence of the attractors provides a candidate for memory on the shortest scale, which does not call for synaptic changes; as such the attractors are natural candidates for Hebbian learning. Recent extensive data analysis of recordings from performing monkeys puts rather severe upper bounds on the spike rates in some regions of cortex, in which enhanced rates are observed. These findings favor a class of models of ANNs which have stochastic attractors whose spike rates are tunable by the level of the overall inhibition. While these models include significant modifications of the original ANNs, they belong conceptually to the same class, in terms of computation, effectiveness and robustness. Finally, we remark on a possible reinterpretation of recent empirical biochemical findings that can provide a realistic mechanism for Hebbian learning.}
+}
+
 @article{10.1145/947955.1083808,
 author = {Perlis, Alan J.},
 title = {Special Feature: Epigrams on Programming},
@@ -28,7 +60,7 @@ author = {Minsky, Marvin},
 title = {The Society of Mind},
 year = {1986},
 isbn = {0671607405},
-publisher = {Simon & Schuster, Inc.},
+publisher = {Simon \& Schuster, Inc.},
 address = {USA}
 }
 
