`_loadCaret` now skips <space>s.

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,37 @@
+@Article{Dabney2020,
+author={Dabney, Will
+and Kurth-Nelson, Zeb
+and Uchida, Naoshige
+and Starkweather, Clara Kwon
+and Hassabis, Demis
+and Munos, R{\'e}mi
+and Botvinick, Matthew},
+title={A distributional code for value in dopamine-based reinforcement learning},
+journal={Nature},
+year={2020},
+month={Jan},
+day={01},
+volume={577},
+number={7792},
+pages={671-675},
+abstract={Since its introduction, the reward prediction error theory of dopamine has explained a wealth of empirical phenomena, providing a unifying framework for understanding the representation of reward and value in the brain1--3. According to the now canonical theory, reward predictions are represented as a single scalar quantity, which supports learning about the expectation, or mean, of stochastic outcomes. Here we propose an account of dopamine-based reinforcement learning inspired by recent artificial intelligence research on distributional reinforcement learning4--6. We hypothesized that the brain represents possible future rewards not as a single mean, but instead as a probability distribution, effectively representing multiple future outcomes simultaneously and in parallel. This idea implies a set of empirical predictions, which we tested using single-unit recordings from mouse ventral tegmental area. Our findings provide strong evidence for a neural realization of distributional reinforcement learning.},
+issn={1476-4687},
+doi={10.1038/s41586-019-1924-6},
+url={https://doi.org/10.1038/s41586-019-1924-6}
+}
+
+@inproceedings{NEURIPS2020_1457c0d6,
+ author = {Brown, Tom and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared D and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and Agarwal, Sandhini and Herbert-Voss, Ariel and Krueger, Gretchen and Henighan, Tom and Child, Rewon and Ramesh, Aditya and Ziegler, Daniel and Wu, Jeffrey and Winter, Clemens and Hesse, Chris and Chen, Mark and Sigler, Eric and Litwin, Mateusz and Gray, Scott and Chess, Benjamin and Clark, Jack and Berner, Christopher and McCandlish, Sam and Radford, Alec and Sutskever, Ilya and Amodei, Dario},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Larochelle and M. Ranzato and R. Hadsell and M. F. Balcan and H. Lin},
+ pages = {1877--1901},
+ publisher = {Curran Associates, Inc.},
+ title = {Language Models are Few-Shot Learners},
+ url = {https://proceedings.neurips.cc/paper/2020/file/1457c0d6bfcb4967418bfb8ac142f64a-Paper.pdf},
+ volume = {33},
+ year = {2020}
+}
+
 @misc{hubinger2019risks,
       title={Risks from Learned Optimization in Advanced Machine Learning Systems}, 
       author={Evan Hubinger and Chris van Merwijk and Vladimir Mikulik and Joar Skalse and Scott Garrabrant},
